# tcpshm_improvement

./: .gitignore  CMakeLists.txt  mmap.h  msg_header.h  ptcp_conn.h  ptcp_queue.h  spsc_varq.h  tcpshm_client.h  tcpshm_conn.h
.cursor/rules/: hft.mdc
crypto_market_data/: CMakeLists.txt  README.md  build.sh  client_example  client_example.cpp  common.h  market_data_client.h  market_data_server.h  market_data_types.h  server_example  server_example.cpp  timestamp.h
crypto_market_example/: CMakeLists.txt  README.md  build_cmake.sh  common.h  echo_client  echo_client.cpp  echo_server  echo_server.cpp
crypto_market_example/client/: client_server.ptcp
crypto_market_example/server/: server_client.ptcp
doc/: interface.md
test/: CMakeLists.txt  common.h  echo_client.cpp  echo_server.cpp
test/client/: client_server.ptcp
test/server/: server_client.ptcp
